# listing-launch-auditor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: audit.py  checkout.py  entitlement.py  events.py  health.py
docs/: prompt.md
evals/: cases.jsonl  run_local.py
evals/results/: latest.json
src/passive_income_studio/: __init__.py  agent_specs.py  auditor.py  billing.py  exporter.py  idea_sources.py  main.py  memory.py  orchestrator.py  policies.py  portfolio.py  schemas.py  web.py
src/passive_income_studio/web_assets/: app.js  index.html  styles.css
tests/: test_auditor.py  test_billing.py  test_exporter.py  test_idea_sources.py  test_memory.py  test_policies.py  test_portfolio.py  test_schemas.py  test_workflow.py
