[project]
name = "passive-income-studio"
version = "0.1.0"
description = "No-spend multi-agent studio for launch-ready digital product experiments."
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.4.0",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "stripe>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
passive-income-studio = "passive_income_studio.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

